[package]
name = "gistli"
version = "0.1.0"
authors = ["pkoniu <patryk.konior@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.11.0"
futures = "0.3.4"
hyper = "0.13.2"
hyper-tls = "0.4.1"
tokio = { version = "0.2.11", features = ["full"] }